fix: 语义检索不准确